# privatim-bundle

./: .gitignore  PACKAGING.md  PITCH.md  PITCH_BULLET_POINTS.md  README.md  farm.manifest.json  icp.yaml  local.manifest.json
ai_assistant/: Cargo.toml  ai_assistant.did  canister.yaml
ai_assistant/src/: lib.rs
app_backend/: Cargo.toml  app_backend.did  canister.yaml
app_backend/src/: lib.rs
audit/: Cargo.toml  audit.did  canister.yaml
audit/src/: lib.rs
data/: Cargo.toml  canister.yaml  data.did
data/src/: lib.rs
documents/: Cargo.toml  canister.yaml  documents.did
documents/src/: lib.rs
identity/: Cargo.toml  canister.yaml  identity.did
identity/src/: lib.rs
web_frontend/: .env.example  canister.yaml  package.json  pnpm-lock.yaml  vite.config.ts
web_frontend/src/: app.css  app.html
web_frontend/src/declarations/: ai_assistant.idl.ts  ai_assistant.types.ts  app_backend.idl.ts  app_backend.types.ts  audit.idl.ts  audit.types.ts  data.idl.ts  data.types.ts  documents.idl.ts  documents.types.ts  identity.idl.ts  identity.types.ts
web_frontend/src/lib/: actor.ts  audit.ts  auth.svelte.ts  document-crypto.ts  features.ts  format.ts  ic-env.ts  ii.ts
web_frontend/src/lib/components/: DemoDataButton.svelte
web_frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web_frontend/src/routes/admin/bootstrap/: +page.svelte
web_frontend/src/routes/admin/compliance/: +page.svelte
web_frontend/src/routes/assistant/: +page.svelte
web_frontend/src/routes/audit/: +page.svelte
web_frontend/src/routes/clients/: +page.svelte
(+3 files in other folders)
